--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@ images*
 delete*
 
 .DS_Store
+
+# CLion noise
+# --------------
+cmake-build-debug
+cmake-build-release
+cmake_install.cmake
+/CMakeFiles/*
