--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,11 @@ TARGET_LINK_LIBRARIES(testLib  ${ACADO_SHARED_LIBRARIES} ${PYTHON_LIB})
 SET_TARGET_PROPERTIES(testLib
     PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin )
 
+add_executable(testLib_vehs libs/test_lib_vehs.cpp libs/lib_models.cpp)
+TARGET_LINK_LIBRARIES(testLib_vehs  ${ACADO_SHARED_LIBRARIES} ${PYTHON_LIB})
+SET_TARGET_PROPERTIES(testLib_vehs
+    PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin )
+
 add_library(testLib_shared SHARED
     libs/lib_models.cpp)
 set_target_properties(testLib_shared PROPERTIES PUBLIC_HEADER libs/lib_models.h)
